--- a/GitTest01/src/main/webapp/assets/css/map3.css
+++ b/GitTest01/src/main/webapp/assets/css/map3.css
@@ -43,3 +43,34 @@
     border-radius: 5px;
     text-align: left;
 }
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+}
+
+.pagination a {
+    color: black;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    margin: 0 4px;
+}
+
+.pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 5px;
+}
+
+.pagination a:hover:not(.active) {
+    background-color: #ddd;
+    border-radius: 5px;
+}
+
+/* :visited 상태의 링크 색상을 기본 색상으로 설정 */
+.pagination a:visited {
+    color: black;
+}
