--- a/GitTest01/src/main/webapp/assets/css/main.css
+++ b/GitTest01/src/main/webapp/assets/css/main.css
@@ -32,6 +32,8 @@
 }
 .banner-text a{       /*로그인 화면 언더라인 삭제 기능*/
     text-decoration: none; 
+     border: none;
+    color: #030303;
 }
 
 .banner-text button {
