--- a/GitTest01/src/main/webapp/assets/css/main.css
+++ b/GitTest01/src/main/webapp/assets/css/main.css
@@ -22,7 +22,7 @@
 .banner-text {
     text-align: center;
     margin-left: 20px;
-    font-family: Arial, sans-serif;
+    font-family: 'Gaegu','Arial', 'sans-serif';
     margin: 0;
     padding: 20px;
     /* border: 2px solid lightgray; */
@@ -34,6 +34,8 @@
     text-decoration: none; 
     border: none;
     color : #030303;
+    font-family: 'Gaegu','Arial', 'sans-serif';
+
 }
 
 .banner-text button {
@@ -66,6 +68,8 @@
     height: 70px;
     text-decoration: none;
     font-weight: bold;
+    font-family: 'Gaegu','Arial', 'sans-serif';
+
     
 }
 
@@ -85,7 +89,7 @@
     color: #F8BF2F;
     font-size: 30px;
     font-weight: bold;
-    font-family: "Sigmar One";
+    font-family: 'Gaegu','Arial', 'sans-serif';
 }
 
 /* 기타 스타일 */
@@ -93,7 +97,7 @@
     font-size: 16px;
     text-align: center;
     margin-top: 0px;
-    font-family: Arial, serif;
+    font-family: 'Gaegu','Arial', 'sans-serif';
     padding: 15px;
     text-decoration-line: none;
 }
@@ -102,6 +106,7 @@
 .login a {
     text-decoration: none;
     color: inherit;
+    font-size: 15px;
 }
 
 .section {
