--- a/GitTest01/src/main/webapp/assets/css/Mypage.css
+++ b/GitTest01/src/main/webapp/assets/css/Mypage.css
@@ -46,6 +46,8 @@
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
+    font-family: 'Gaegu','Arial', 'sans-serif' ;
+    
 }
 .input-box-group {
     width: calc(100% - 40px); /* Adjust width to match the form width */
@@ -86,6 +88,8 @@
     width: calc(100% - 40px);
     margin: 0 auto;
     margin-top: 20px;
+    font-family: 'Gaegu','Arial', 'sans-serif' ;
+    
 }
 .input-box select {
     background: url('data:image/svg+xml;utf8,<svg fill="%23999" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M7 10l5 5 5-5z"/></svg>') no-repeat right 10px center;
